# libncompress

./: .gitignore  Makefile  Makefile.in  README.html  README.md  compress42.c  compress42.h  configure  configure.ac  libncompress.pc.in  libncompress.spec.in  mkrpm  mktar  ncompress.man  ncompress42.c  ncompress42.h  style.css  version.in
tests/: .gitignore  Makefile  file_tests.c  quick_tests.c
