
AC_PREREQ(2.69)
AC_INIT([libncompress], [4.2], [als@iinet.net.au])
AC_SUBST(PACKAGE_RELEASE, [6])

# Checks for programs.
AC_PROG_CC

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_HEADER_STDC

AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([libncompress.spec])
AC_CONFIG_FILES([libncompress.pc])
AC_CONFIG_FILES([version])
AC_OUTPUT

